fix some styling issues

--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -1,14 +1,18 @@
+
+
+
 .collection-preview {
-    margin: auto;
- display: flex;
- flex-direction:column;
- margin-bottom: 30px;
- .title{
-     font-size: 28px;
-     margin-bottom: 25px;
- }
- .preview{
-     display:flex;
-     justify-items: space-between;
- }
-}
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+  
+    .title {
+      font-size: 28px;
+      margin-bottom: 25px;
+    }
+  
+    .preview {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
