--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -22,7 +22,10 @@
 
     }
     .quantity{
-        padding-left: 20px;
+        display: flex;
+        .arrow{
+            cursor: pointer;
+        }
     }
     .remove-button{
         padding-left: 12px;
