--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -25,4 +25,10 @@
         margin-left: auto;
         font-size: 36px;
     }
+    .test-warning{
+        text-align: center; 
+        margin-top: 40px; 
+        font-size: 24px;
+        color: red;
+    }
 }
